crates/tree-sitter-fe/grammar.js
    source_file: $ => repeat(choice($._item, prec.dynamic(-1, $._statement))),

    // Statement terminator: either an explicit ';' or an automatic one
    // inserted by the external scanner at newline boundaries.
    // This mirrors tree-sitter-javascript's _semicolon approach.
    _terminator: $ => choice(';', $._automatic_semicolon),

    // ==================== ITEMS ====================

    _item: $ => choice(
      $.use_statement,
      $.const_definition,
      $.function_definition,
      $.struct_definition,
      $.enum_definition,
      $.contract_definition,
      $.msg_definition,
      $.trait_definition,
      $.impl_block,
      $.impl_trait,
      $.type_alias,
      $.mod_definition,
      $.extern_block,
    ),

    // Use statement: use path::to::{A, B}
    function_definition: $ => prec.right(seq(
      $._function_signature,
      // A block that could be the body or a braced `where` condition after a
      // `,` is the body, as the compiler's parser reads it.
      optional(field('body', prec.dynamic(1, $.block))),
    )),

    _function_signature: $ => seq(
      optional($.attribute_list),
      optional($.visibility),
      optional('unsafe'),
      optional('const'),
      'fn',
      field('name', $.identifier),
      optional($.generic_param_list),
      $.parameter_list,
      optional(seq('->', field('return_type', $._type))),
      optional($.uses_clause),
      optional($.where_clause),
    ),

    parameter_list: $ => seq(
      '(',
      sepTrailing($.parameter, ','),
      ')',
    ),

    trait_ref: $ => seq(
      $.path,
      optional($.generic_arg_list),
    ),

    generic_param_list: $ => seq(
      $._generic_open,
      sepTrailing(choice($.type_generic_param, $.const_generic_param), ','),
      '>',
    ),

    type_generic_param: $ => seq(
      field('name', $.identifier),
      optional(seq(':', $.type_bound_list)),
      optional(seq('=', field('default', $._type))),
    ),

    type_bound_list: $ => choice(
      $.type_bound,
      prec.right(PREC.UNARY + 1, seq($.type_bound_list, '+', $.type_bound)),
    ),

    type_bound: $ => choice(
      // Trait bound: Path<Args>
      prec.right(PREC.PATH + 5, seq($.path, optional($.generic_arg_list))),
      // Kind bound: * -> * -> *, (* -> *) -> *, etc.
      $.kind_bound,
    ),

    generic_arg_list: $ => seq(
      $._generic_open,
      sepTrailing($._generic_arg, ','),
      '>',
    ),

    _generic_arg: $ => choice(
      $.assoc_type_generic_arg,
      $._type,
      // Const generic args: block expressions like {3 + 4} and literals
      $.block,
      $.literal,
    ),

    _type: $ => choice(
      $.path_type,
      $.tuple_type,
      $.array_type,
      $.pointer_type,
      $.mode_type,
      $.self_type,
      $.never_type,
      $.qualified_path_type,
    ),

    // Mode-prefixed type: ref Foo, mut Foo, own Foo
    mode_type: $ => seq(
      field('mode', choice('ref', 'mut', 'own')),
      field('type', $._type),
    ),

    // Qualified path: <Type as Trait>::AssocType
    qualified_path_type: $ => prec.right(seq(
      $._generic_open,
      field('type', $._type),
      'as',
      field('trait', $.trait_ref),
      '>',
      repeat1(seq('::', field('name', $.identifier))),
    )),

    path_type: $ => prec.right(PREC.PATH + 5, seq(
      $.path,
      optional($.generic_arg_list),
    )),

    never_type: $ => '!',

    // ==================== EXPRESSIONS ====================

    _expression: $ => choice(
      $.binary_expression,
      $.unary_expression,
      $.cast_expression,
      $.call_expression,
      $.macro_call_expression,
      $.method_call_expression,
      $.instantiation_expression,
      $.field_expression,
      $.index_expression,
      // Path expressions: identifier and scoped paths directly in expression
      prec.left($.identifier),
      $.scoped_path,
      'self',
      'Self',
      'super',
      'ingot',
      $.record_expression,
      $.tuple_expression,
      $.array_expression,
      $.array_repeat_expression,
      $.paren_expression,
      $.literal,
      $.if_expression,
      $.match_expression,
      $.with_expression,
      $.block,
      $.assignment_expression,
      $.augmented_assignment_expression,
      $.range_expression,
      $.qualified_path_expression,
      $.mode_expression,
    ),

    // Mode expression: mut expr, ref expr, own expr
    // Creates a borrow/move of the given expression.
    // e.g., `mut x`, `ref s.v`, `let p = mut foo`
    binary_expression: $ => {
      const table = [
        [PREC.OR, '||'],
        [PREC.AND, '&&'],
        [PREC.COMPARE, choice('==', '!=', $._comparison_lt, '>', '<=', '>=')],
        [PREC.BITOR, '|'],
        [PREC.BITXOR, '^'],
        [PREC.BITAND, '&'],
        [PREC.SHIFT, choice('<<', '>>')],
        [PREC.ADD, choice('+', '-')],
        [PREC.MUL, choice('*', '/', '%')],
      ];

      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(precedence, seq(
            field('left', $._expression),
            field('operator', operator),
            field('right', $._expression),
          ))
        ),
        // ** is right-associative
        prec.right(PREC.EXP, seq(
          field('left', $._expression),
          field('operator', '**'),
          field('right', $._expression),
        )),
      );
    },

    // Condition binary expressions without `||`.
    // Used by let-chains so unparenthesized `||` is rejected whenever
    // a `let` condition is part of the chain.
    array_expression: $ => seq(
      '[',
      sepTrailing($._expression, ','),
      ']',
    ),

    paren_expression: $ => seq(
      '(',
      $._expression,
      ')',
    ),

    // Condition expression atoms excluding let-conditions and condition-specific
    // binary operator nodes.
    _statement: $ => choice(
      $.let_statement,
      $.for_statement,
      $.while_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.expression_statement,
    ),

    block: $ => seq(
      '{',
      repeat(choice($._statement, $._item)),
      '}',
    ),

    let_statement: $ => seq(
      'let',
      optional('mut'),
      field('name', $._pattern),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('value', $._expression))),
      $._terminator,
    ),

    expression_statement: $ => seq($._expression, $._terminator),

    // ==================== PATTERNS ====================

    _pattern: $ => choice(
      $.wildcard_pattern,
      $.rest_pattern,
      $.literal_pattern,
      $.identifier_pattern,
      $.mut_pattern,
      $.tuple_pattern,
      $.path_pattern,
      $.path_tuple_pattern,
      $.record_pattern,
      $.or_pattern,
    ),

    path_pattern: $ => prec(1, $.path),

    path: $ => prec.right(seq(
      $.path_segment,
      repeat(prec.right(PREC.PATH + 1, seq('::', $.path_segment))),
    )),

    path_segment: $ => choice(
      $.identifier,
      'self',
      'Self',
      'super',
      'ingot',
    ),

    // ==================== ATTRIBUTES ====================

    literal: $ => choice(
      $.integer_literal,
      $.string_literal,
      $.boolean_literal,
    ),

    integer_literal: $ => token(choice(
      /[0-9]+(?:_[0-9]+)*/,
      /0[bB][0-1]+(?:_[0-1]+)*/,
      /0[oO][0-7]+(?:_[0-7]+)*/,
      /0[xX][0-9a-fA-F]+(?:_[0-9a-fA-F]+)*/,
    )),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        $._string_content,
        $.escape_sequence,
      )),
      '"',
    ),

    _string_content: $ => token.immediate(prec(1, /[^"\\]+/)),

    line_comment: $ => token(seq('//', /[^\n]*/)),

    // Doc comment: /// (higher priority than line_comment)
    block_comment: $ => seq(
      '/*',
      optional($._block_comment_content),
      $._block_comment_end,
    ),

    // ==================== IDENTIFIERS ====================

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
  },
});

// Helper: separated by separator with optional trailing
function sepTrailing(rule, sep) {
  return optional(seq(rule, repeat(seq(sep, rule)), optional(sep)));
}

// Helper: one or more separated by separator
function sep1(rule, sep) {
  return seq(rule, repeat(seq(sep, rule)));
}
